style.css
/* ... */
.welcome-container .main-h1 {
    margin-top: 0;
    padding: 0;
    height: fit-content;
}
.welcome-spans {
    animation: highlightWelcome 4.5s steps(7)infinite;
}
.welcome1 {
    animation-delay: 0.5s;
}
.welcome2 {
    animation-delay: 1s;
}
.welcome3 {
    animation-delay: 1.5s;
}
.welcome4 {
    animation-delay: 2s;
}
.welcome5 {
    animation-delay: 2.5s;
}
.welcome6 {
    animation-delay: 3s;
}
.welcome7 {
    animation-delay: 3.5s;
}
@keyframes highlightWelcome {
    0% {
        color: black
    }
        
    1% {
        color: blue;
    }
    50% {
        color: black
    }      
}
.home-pics {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transform: 
        rotateY(calc((var(--position) - 1) * (360 / var(--quantity)) *1deg))
        translateZ(550px);
    
}
.home-pics img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transform: scale(0.2);
}

.home-container .home-pic-container .home-pics .main-me img {
    /* object-fit: cover; */
    box-shadow: 0px 0px 10px black;
    opacity: 0.85;
    position: relative;
    max-height: 80vh;
    max-width: 750px;
}
.home-container .main-me {
    position: relative;
    top: 10dvh;
    justify-self: center;
    z-index: -5;
}
.home-container .main-me img {
    position: relative;
    max-height: 80vh;
    max-width: 750px;
}

.content {
    position: absolute;
    bottom: -8%;
    left: 50%;
    transform: translateX(-50%);
    width: 100vw;
    height: fit-content;
    padding-bottom: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    z-index: 7;
    overflow: hidden;
    
}
.content h1 {
    font-family: "Stack Sans Notch", sans-serif;
    font-size: 6rem;
    color: black;
    text-align: center;
    
    font-weight: 650;
    font-style: normal;
    text-shadow: 1px 1px white;
}

.name {
    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
    animation: clip-text 4s ease-out forwards;
}

.mid-name {
    color: green;
}
.home-container .main-me {
    filter: drop-shadow(2px 2px 5px black); 
}

@keyframes clip-text {
    to {
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); 
    }
}

.skills-top-banner {
    display: flex;
    width: 100%;
    min-height: 7dvh;
    white-space: nowrap;
    position: relative;
    overflow: hidden;
    background: black;
    top: 0px;
    left: 0px;
    margin: 0px;
    padding:0px;
    grid-column: 1 / span 2;
    grid-row: 1;
}
.skills-bottom-banner {
    grid-column: 1 / span 2;
    grid-row: 4;
}
/* .projects-grid {
    display: grid;
    grid-template-columns: 40vw 40vw;
    grid-template-rows: 40vh 40vh;
    width: 100%;
    min-height: 93vh;
    white-space: nowrap;
    position: relative;
    overflow: hidden;
    top: 0px;
    left: 0px;
    margin: 0px;
    pad:0px;
} */
.skills-top, .skills-bottom {
    color: white;
    font-weight: 250;
    font-style: light;
    display: inline-block;
    align-content: center;
}
.marquee-track {
    display: flex;
    width: max-content;
    flex-shrink: 0;
}

.marquee-group {
    display: flex;
    width: max-content;
    flex-shrink: 0;
}

.marquee-track-top {
    animation: scrollWorkTop 90s linear infinite;
}

@keyframes scrollWorkTop {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-50%);
    }
}

.marquee-track-bottom {
    animation: scrollBottom 90s linear infinite;
}

@keyframes scrollBottom {
    0% {
        transform: translateX(-50%);
    }
    100% {
        transform: translateX(0);
    }
}

/* ********************** SECTION 2: SKILLS OVERVIEW ************************ */

.section2-grid {
    position: relative;
    top: 0%;
    width: 100%;
    height: 100dvh;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 7dvh minmax(0, 1fr) minmax(0, 1fr) 7dvh;
    scroll-snap-align: start;
    scroll-snap-stop: always;
}

.main-skills-containers {
    margin: clamp(5px, 5vw, 20px);
    
    /* border-radius: 25px;
    box-shadow: inset 2px 2px 0 0 rgba(0, 0, 0, 0.4) */
}
.nb-tools {
    animation: colourChange 10s steps(13) infinite;
    /* transition: transform 0.25s ease-out; */
}
.tool1 {
    animation-delay: 0.75s;
}
.tool2 {
    animation-delay: 1.5s;
}
.tool3 {
    animation-delay: 2.25s;
}
.tool4 {
    animation-delay: 3s;
}
.tool5 {
    animation-delay: 3.75s;
}
.tool6 {
    animation-delay: 4.5s;
}
.tool7 {
    animation-delay: 5.25s;
}
.tool8 {
    animation-delay: 6s;
}
.tool9 {
    animation-delay: 6.75s;
}
.tool10 {
    animation-delay: 7.5s;
}
.tool11 {
    animation-delay: 8.25s;
}
.tool12 {
    animation-delay: 9s;
}
.tool13 {
    animation-delay: 9.25s;
}
@keyframes colourChange {
    0% {
        color: black;
    }
    50% {
        color: blue;
        font-weight: 700;
        /* text-decoration: underline; */
    }
    100% {
        color: black;
    }
}

.main-md-img-container {
    position: relative;
    top: 0%;
    left:0%;
    grid-column: 2;
    grid-row: 2;
    overflow: hidden;
}
.main-md-img-container2 {
    position: relative;
    top: 0%;
    left:0%;
    grid-column: 1;
    grid-row: 3;
    overflow: hidden;
}
.main-containers, .main-skills-containers {
    margin: clamp(10px, 1.5dvw, 40px);
}
.md-carousal {
    position: absolute;
    height: 100%;
    width: 100%;
    display: flex;
    /* grid-template-columns: repeat(4, auto);  */
    align-items: center;
    overflow: hidden;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    
}

.carousel-track {
    display: flex;
    width: max-content;
    flex-shrink: 0;
    align-items: center;
}

.carousel-group {
    display: flex;
    gap: clamp(1rem, 3vw, 6rem);
    width: max-content;
    flex-shrink: 0;
    align-items: center;
}

.carousel-track-forward {
    animation: scrollImages 45s linear infinite;
}

.carousel-track-backward {
    animation: scrollBackImages 45s linear infinite;
}
/* ... */

